--- a/res/css/short-pixel-modal.css
+++ b/res/css/short-pixel-modal.css
@@ -24,14 +24,15 @@ div.shortpixel-modal {
     max-height: 90%;
     overflow-y: auto;
 }
-div.shortpixel-modal .sp-close-button, div.shortpixel-modal .sp-close-upgrade-button {
+div.shortpixel-modal sp-close-button, div.shortpixel-modal button.sp-close-upgrade-button {
     float: right;
     margin-top: 0px;
-    background: transparent;
+    background: transparent !important;
     border: none;
     font-size: 22px;
     line-height: 10px;
     cursor: pointer;
+
 }
 div.shortpixel-modal .sptw-modal-spinner {
     background-image: url("../img/spinner2.gif");
