--- a/res/css/shortpixel-admin.css
+++ b/res/css/shortpixel-admin.css
@@ -167,6 +167,22 @@
   width: 45%;
   padding: 4px;
 }
+.settings_page_wp-shortpixel-settings section#tab-debug .table {
+  display: table;
+}
+.settings_page_wp-shortpixel-settings section#tab-debug .table > div {
+  display: table-row;
+}
+.settings_page_wp-shortpixel-settings section#tab-debug .table > div > span {
+  display: table-cell;
+}
+.settings_page_wp-shortpixel-settings section#tab-debug .table > div.head > span {
+  font-weight: 700;
+}
+.settings_page_wp-shortpixel-settings section#tab-debug .table.notices > div > span {
+  width: 25%;
+  text-align: center;
+}
 .settings_page_wp-shortpixel-settings .view-notice {
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
   border: 4px solid #fff;
