--- a/res/css/short-pixel.css
+++ b/res/css/short-pixel.css
@@ -618,7 +618,7 @@ article.sp-tabs section.sel-tab h2 {
     z-index: 100;
 }
 
-.deliverWebpSettings, .deliverWebpTypes, .deliverWebpAlteringTypes {
+.deliverWebpTypes, .deliverWebpAlteringTypes {
     display: none;
 }
 .deliverWebpTypes .sp-notice {
@@ -640,9 +640,6 @@ article.sp-tabs section.sel-tab h2 {
     display: none;
 }
 
-
-article.sp-tabs section #createWebp:checked ~ .deliverWebpSettings,
-article.sp-tabs section #createAvif:checked ~ .deliverWebpSettings,
 article.sp-tabs section #deliverWebp:checked ~ .deliverWebpTypes,
 article.sp-tabs section #deliverWebpAltered:checked ~ .deliverWebpAlteringTypes
 {
