--- a/res/scss/shortpixel-bulk.scss
+++ b/res/scss/shortpixel-bulk.scss
@@ -742,6 +742,11 @@
                 max-height: 100%;
                 width: 100%;
               //  transition: opacity 1s eas
+                &[src=""]
+                {
+                   height: 350px;
+                   width: 350px;
+                }
               }
               p {
                 position: absolute;
