--- a/res/scss/shortpixel-admin.scss
+++ b/res/scss/shortpixel-admin.scss
@@ -6,4 +6,5 @@
 @import 'view/settings';
 @import 'view/edit-media';
 @import 'view/debug';
-@import 'view/list-item';  
+@import 'view/list-item';
+@import 'view/modal';
