--- a/res/scss/shortpixel-bulk.scss
+++ b/res/scss/shortpixel-bulk.scss
@@ -11,7 +11,7 @@
     h3.heading {
       margin: 15px 0 15px 0px;
       padding-left: 10px;
-      font-size: 19px;
+      font-size: 20px;
       font-weight: 400;
       line-height: 42px;
       border-bottom: 1px solid #ccc;
@@ -53,7 +53,6 @@
         width: 90%;
         min-height: 80vh;
         position: relative;
-        border-radius: 30px;
       //  overflow: hidden;
 
         .shortpixel-bulk-loader
@@ -126,7 +125,14 @@
           width: 100%;
         }
 
-        .error { color: #ff0000; }
+        .error {
+            h3 { margin-left: 12px; }
+            p {
+              margin-left: 12px;
+              color: #ff0000;
+              &.text { color : #000; }
+            }
+         }
         .errorbox {
           display: block;
           transition: 1s all;
@@ -191,6 +197,9 @@
 
        .bulk-wrapper
        {
+            background: url('../img/bulk/dashboard-background.svg') no-repeat;
+            background-size: cover;
+            background-position: left center;
             background-color: #116C7D;
             text-align: center;
             height: 150px;
@@ -198,6 +207,14 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            .dashboard-image {
+            //  width: 100%;
+            //  height: 150px;
+              z-index: 1;
+              position: absolute;
+              left: 0; right: 0;
+
+            }
             button
             {
                color: #ffffff;
@@ -229,9 +246,9 @@
        .dashboard-log
        {
           display: table;
-          width: 50%;
+          width: 80%;
           margin: 0 auto;
-          h3 { display: table-caption; }
+          h3 { display: table-caption; text-align: center;}
           > div {
             display: table-row;
             > span { display: table-cell; padding: 8px 8px 8px 0; }
@@ -239,12 +256,26 @@
           .head
           {
             span {
-
               font-weight: 700;
+              padding-left: 15px;
             }
           }
-          .data span {
+          .data
+          {
+            span {
+              border-bottom: 1px solid #EBF5FF;
+              border-top: 1px solid #EBF5FF;
+              &:first-child { border-left: 1px solid #EBF5FF; }
+              &:last-child {  border-right: 1px solid #EBF5FF; }
               font-size: 15px;
+              padding-left: 10px;
+              &.date {
+                 color: #1FBEC9;
+                 background: url('../img/bulk/checkmark.svg') left center no-repeat;
+                 padding-left: 29px;
+              }
+
+            }
           }
        }
 
