--- a/res/scss/shortpixel-admin.scss
+++ b/res/scss/shortpixel-admin.scss
@@ -1,6 +1,5 @@
 
-@import 'view/bulk-restore-all';
-@import 'view/bulk_dashboard';
+
 @import 'view/settings-advanced';
 @import 'view/settings-cloudflare';
 @import 'view/settings';
@@ -8,3 +7,10 @@
 @import 'view/debug';
 @import 'view/list-item';
 @import 'view/modal';
+
+// General Styles ( mostly from style.css )
+
+// Used in modals around
+.shortpixel-hide {
+    display: none;
+}
