Fixes for nggallery / custommedia / processing ( branch switch commit )

--- a/res/scss/shortpixel-admin.scss
+++ b/res/scss/shortpixel-admin.scss
@@ -4,9 +4,11 @@
 @import 'view/settings-cloudflare';
 @import 'view/settings';
 @import 'view/edit-media';
-@import 'view/debug';
+@import 'view/other-media';
 @import 'view/list-item';
 @import 'view/modal';
+@import 'view/debug';
+
 
 // General Styles ( mostly from style.css )
 
