Alpha 17. Fixes ( amongst others ) - Compare / custom compare / issues with compare - NGGallery issues, styling issues and general functionality - Issues with Custom directory management. - Issues with Quota Notifications and popups - Deactivating plugin message - Requesting new user key fixes - Fixes for first-time setup on empty installation ( notices / errors ) - Issue with Avif / keeps offering optimization  ( in custom ) - Fixes several issues with OptimizeController

--- a/res/css/shortpixel-othermedia.css
+++ b/res/css/shortpixel-othermedia.css
@@ -129,11 +129,17 @@
   max-width: 400px;
   min-width: 250px;
   display: inline-block;
+  position: relative;
 }
 @media (max-width: 1550px) {
   .shortpixel-other-media .list-overview .item .sp-column-info {
     width: auto;
   }
+}
+.shortpixel-other-media .list-overview .item .sp-column-info .sp-column-actions {
+  position: absolute;
+  right: 10px;
+  top: 0;
 }
 @media (max-width: 1250px) {
   .shortpixel-other-media .list-overview .heading .type {
