--- a/res/scss/view/_list-item.scss
+++ b/res/scss/view/_list-item.scss
@@ -15,17 +15,27 @@
          background: #fff;
          padding: 8px;
          border: 1px solid #ccc;
-         max-width: 300px;
+         max-width: 360px;
          position: absolute;
          display: none;
          z-index: 10;
          transition: all 1s;
+				 box-sizing: border-box;
          .thumb
          {
              position: relative;
              width: 100%;
+
+						  .thumb-name {
+									overflow: hidden;
+									max-width: 200px;
+									white-space: nowrap;
+									display: inline-block;
+							}
               .optimize-bar {
                   float: right;
+									width: 110px;
+									margin-left: 8px;
                    .point
                    {
                       width: 8px;
