--- a/res/css/shortpixel-toolbar.css
+++ b/res/css/shortpixel-toolbar.css
@@ -38,12 +38,13 @@ CSS for features that are displayed on all Admin page, like the bar status icon 
   margin: 0 auto;
   box-sizing: border-box;
   border-radius: 50%;
-  padding: 5px 0 0 7px;
+  padding: 5px 0 0 0px;
   font-weight: 500;
   font-size: 14px;
   line-height: 14px;
   background: rgba(0, 0, 0, 0.6);
   color: #fff;
+  text-align: center;
 }
 #wpadminbar li.shortpixel-toolbar-processing a.ab-item > div .controls {
   position: absolute;
