--- a/res/css/shortpixel-bulk.css
+++ b/res/css/shortpixel-bulk.css
@@ -40,6 +40,39 @@
 .shortpixel-bulk-wrapper .hidden {
   display: none !important;
 }
+.shortpixel-bulk-wrapper .bulk-modal {
+  position: absolute;
+  padding: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  width: auto;
+  box-sizing: border-box;
+  box-shadow: rgba(0, 0, 0, 0.5) 4px 4px 20px;
+}
+.shortpixel-bulk-wrapper .bulk-modal .close {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  color: white;
+  font-size: 26px;
+}
+.shortpixel-bulk-wrapper .bulk-modal .title {
+  margin: 0;
+  padding: 12px;
+  background: #1FB5BF;
+  width: 100%;
+  font-size: 16px;
+  color: #ffffff;
+  box-sizing: border-box;
+  height: 40px;
+}
+.shortpixel-bulk-wrapper .bulk-modal .content {
+  padding: 12px;
+  box-sizing: border-box;
+  height: 90%;
+}
 .shortpixel-bulk-wrapper .screen-wrapper {
   background: #fff;
   width: 90%;
